[package]
name = "auction"
version = "0.1.0"
authors = ["mutanabbi <ravishankar@mail.ru>"]

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
argparse = "0.2.2"
exonum = "0.9.0"
hyper = "0.12"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
tokio-core = "0.1"
